--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,11 +2,12 @@
 <div class="row">
   <div class="small-12 medium-8 columns">
     <h1>Contact</h1>
-    <h3>Want to report a problem?</h3>
+    <p class="static-p">If anyone is interested in contacting me about this site, you can reach me at: adam.butterfield@ymail.com</p>
+<!--     <h3>Want to report a problem?</h3>
     <p class="static-p">bonsai list is still young, there might be somethings that aren't working quite right. Please let me know if you find anything broken.</p>
     <p class="static-p">Send a message to support@bonsai-list.com, and we'll get on it as soon as possible!</p><br />
     <h3>Want to contact the master mind behind bonsai list?</h3>
     <p class="static-p">bonsai list is built and maintained by one person.</p>
-    <p class="static-p">Send me a message to adam@bonsai-list.com.</p>
+    <p class="static-p">Send me a message to adam@bonsai-list.com.</p> -->
   </div>
 </div>
