--- a/app/views/welcome_mailer/new_account_email.html.erb
+++ b/app/views/welcome_mailer/new_account_email.html.erb
@@ -7,7 +7,7 @@
   <h1>Hi <%= @user.first_name %>,</h1>
   <p>Thanks for signing up for bonsai list!</p>
   <p>The site is still pretty new, so please let us know if you have any problems with the site, and we'll get on fixing them right away!</p>
-  <p>Report any issues to support@bonsai-list.com</p>
+  <!-- <p>Report any issues to support@bonsai-list.com</p> -->
   <p>Ready to sign in? <%= link_to "Sign in", new_user_session_url %></p>
 </body>
 </html>
